correct back to top btn on mobile screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,7 +131,7 @@ a {
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
+  right: 10px;
   width: 50px;
   height: 50px;
   z-index: 99;
@@ -143,6 +143,7 @@ a {
   cursor: pointer;
   padding: 15px;
   border-radius: 50%;
+  transition: all .4s;
 }
 
 #myBtn:hover {
